feat: complete all service page

--- a/src/app/pages/services/graphic/graphic.component.html
+++ b/src/app/pages/services/graphic/graphic.component.html
@@ -46,7 +46,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../../../assets/images/icon1.svg"
+                  src="../../../assets/images/specialize-1.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -155,7 +155,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/specialize-1.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -165,7 +165,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/specialize-2.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -175,7 +175,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/specialize-3.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -185,7 +185,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/specialize-4.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -195,7 +195,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/specialize-5.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -205,7 +205,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/specialize-6.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -215,7 +215,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/specialize-7.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -225,7 +225,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/specialize-8.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -235,7 +235,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/specialize-9.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -246,7 +246,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/specialize-10.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -256,7 +256,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/specialize-11.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -266,7 +266,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/specialize-12.svg"
                   class="img-fluid"
                   alt=""
                 />
