--- a/src/app/pages/services/mobile-app/mobile-app.component.html
+++ b/src/app/pages/services/mobile-app/mobile-app.component.html
@@ -87,7 +87,9 @@
               </div>
             </li>
           </ul>
-          <a [routerLink]="['/contact']" class="btn btn-main">Get a quote →</a>
+          <a [routerLink]="['/contact']" class="btn btn-main"
+            >Get a quote &nbsp;<img src="../../../../assets/images/arrow.svg"
+          /></a>
         </div>
       </div>
     </div>
