--- a/src/app/pages/services/seo/seo.component.html
+++ b/src/app/pages/services/seo/seo.component.html
@@ -42,7 +42,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../../../assets/images/icon1.svg"
+                  src="../../../assets/images/seo-benefits-1.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -54,7 +54,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../../../assets/images/icon1.svg"
+                  src="../../../assets/images/seo-benefits-2.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -66,7 +66,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../../../assets/images/icon1.svg"
+                  src="../../../assets/images/seo-benefits-3.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -88,7 +88,9 @@
               </div>
             </li>
           </ul>
-          <a [routerLink]="['/contact']" class="btn btn-main">Get a quote →</a>
+          <a [routerLink]="['/contact']" class="btn btn-main"
+            >Get a quote &nbsp;<img src="../../../../assets/images/arrow.svg"
+          /></a>
         </div>
       </div>
     </div>
@@ -112,7 +114,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/seo-benefits-1.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -128,7 +130,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/seo-benefits-2.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -144,7 +146,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/seo-benefits-3.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -160,7 +162,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/seo-benefits-4.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -176,7 +178,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/seo-benefits-5.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -192,7 +194,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/seo-benefits-6.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -209,7 +211,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/seo-benefits-7.svg"
                   class="img-fluid"
                   alt=""
                 />
@@ -225,7 +227,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../assets/images/icon1.svg"
+                  src="../assets/images/seo-benefits-8.svg"
                   class="img-fluid"
                   alt=""
                 />
