--- a/src/app/pages/services/website/website.component.scss
+++ b/src/app/pages/services/website/website.component.scss
@@ -53,7 +53,7 @@ a.btn.btn-main {
   background-image: url(/../../assets/images/about-icon-5.svg),
     url(/../../assets/images/about-icon-6.svg);
   background-repeat: no-repeat;
-  background-position: 96% 28%, 5% 69%;
+  background-position: 96% 33%, 5% 80%;
   p {
     opacity: 0.5;
     color: #262332;
@@ -63,6 +63,7 @@ a.btn.btn-main {
     max-width: 400px;
   }
   .tts {
+    margin-top: 20px;
     h2 {
       font-size: 24px;
       font-weight: bold;
@@ -159,7 +160,7 @@ a.btn.btn-main {
     padding: 0 4%;
   }
 }
-
+// ******************media queries****************
 @media screen and (max-width: 1700px) {
   .sv-hero {
     h2 {
