--- a/src/app/shared/components/recent-projects/recent-projects.component.scss
+++ b/src/app/shared/components/recent-projects/recent-projects.component.scss
@@ -35,6 +35,10 @@
     border-radius: 5px;
     padding: 15px 35px;
     color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 24px;
     moz-transition: all 0.4s ease-in-out;
     -o-transition: all 0.4s ease-in-out;
     -webkit-transition: all 0.4s ease-in-out;
