--- a/src/app/pages/job-listing/job-listing.component.html
+++ b/src/app/pages/job-listing/job-listing.component.html
@@ -46,8 +46,8 @@
               </li>
             </ul>
             <a [routerLink]="['/application']" class="btn btn-main nav__link"
-              >Apply now →</a
-            >
+              >Apply now &nbsp;<img src="../../../assets/images/arrow.svg"
+            /></a>
           </div>
         </div>
       </div>
