--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -272,6 +272,10 @@
   position: relative;
   top: 6px;
 }
+.open-menu-white {
+  top: 0;
+  width: 15px;
+}
 .side-menu {
   position: relative;
   z-index: 9999;
