refactor application form

--- a/src/app/pages/application/application.component.scss
+++ b/src/app/pages/application/application.component.scss
@@ -50,7 +50,7 @@
   .form-control {
     border-radius: 5px;
     border: 2px solid #262332;
-    padding: 10px 15px !important;
+    // padding: 10px 15px !important;
     min-height: 44px;
     margin-bottom: 30px;
   }
