--- a/src/app/pages/application/application.component.html
+++ b/src/app/pages/application/application.component.html
@@ -44,17 +44,20 @@
             (ngSubmit)="onSubmit(applicationForm)"
           >
             <div class="form-group">
-              <mat-select
+              <select
                 formControlName="jobDetails"
                 class="form-control"
                 placeholder="Select Position"
                 ng-modal
               >
-                <!-- <option value="" selected>select Your Position</option> -->
-                <mat-option *ngFor="let o of options" [value]="o">
+                <option value="" disabled selected selected>
+                  select Your Position
+                </option>
+                <option *ngFor="let o of options" [value]="o">
                   {{ o.name }}
-                </mat-option>
-              </mat-select>
+                </option>
+              </select>
+
               <div
                 *ngIf="
                   formName.jobDetails.invalid && formName.jobDetails.touched
@@ -64,6 +67,8 @@
                   please Select Your Position
                 </mat-error>
               </div>
+            </div>
+            <div class="form-group">
               <input
                 type="text"
                 placeholder="Your Full Name"
@@ -184,8 +189,9 @@
             </div>
 
             <div class="form-group">
+              <label>Attach resume</label>
               <input
-                type="text"
+                type="file"
                 placeholder="Attach resume (PDF/Doc only)"
                 formControlName="resume"
                 class="form-control"
