home page refactor

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -79,8 +79,8 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="swiper-slide-inner">
-                  <div class="row align-items-center">
-                    <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-md-6 slider-main-image">
                       <img
                         src="../../assets/images/main-project1.png"
                         class="img-fluid W-100"
@@ -114,8 +114,8 @@
               </div>
               <div class="swiper-slide">
                 <div class="swiper-slide-inner">
-                  <div class="row align-items-center">
-                    <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-md-6 slider-main-image">
                       <img
                         src="../../assets/images/main-project1.png"
                         class="img-fluid W-100"
@@ -149,8 +149,8 @@
               </div>
               <div class="swiper-slide">
                 <div class="swiper-slide-inner">
-                  <div class="row align-items-center">
-                    <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-md-6 slider-main-image">
                       <img
                         src="../../assets/images/main-project1.png"
                         class="img-fluid W-100"
@@ -184,8 +184,8 @@
               </div>
               <div class="swiper-slide">
                 <div class="swiper-slide-inner">
-                  <div class="row align-items-center">
-                    <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-md-6 slider-main-image">
                       <img
                         src="../../assets/images/main-project1.png"
                         class="img-fluid W-100"
@@ -408,7 +408,7 @@
               </div>
               <div class="content">
                 <h2>Dedicated Resources</h2>
-                <p>Every project is backed with real working humans</p>
+                <h4>Every project is backed with real working humans</h4>
               </div>
             </li>
             <li>
@@ -417,7 +417,7 @@
               </div>
               <div class="content">
                 <h2>Perfection</h2>
-                <p>All our work is quality tested for high quality</p>
+                <h4>All our work is quality tested for high quality</h4>
               </div>
             </li>
             <li>
@@ -426,7 +426,7 @@
               </div>
               <div class="content">
                 <h2>On-time Delivery</h2>
-                <p>Your time is precious. We understand it!</p>
+                <h4>Your time is precious. We understand it!</h4>
               </div>
             </li>
           </ul>
