feat: refactor home page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,13 +12,10 @@
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
           <a [routerLink]="['/about']" class="btn btn-main nav__link"
-            >Lets get started <img src="../../../assets/images/arrow.svg"
+            >Let's get started <img src="../../../assets/images/arrow.svg"
           /></a>
           <div class="hero-inner-img">
-            <img
-              src="../../../assets/images/home-banner-icon.jpeg"
-              alt="icon"
-            />
+            <img src="../../../assets/images/home-banner-icon.svg" alt="icon" />
           </div>
         </div>
       </div>
@@ -235,7 +232,7 @@
   />
   <div class="container">
     <div class="row">
-      <div class="col-md-5 col-lg-6">
+      <div class="col-md-5 col-lg-5">
         <div class="we-offer-inner">
           <h5><small>WE OFFERS</small></h5>
           <h2>
@@ -249,7 +246,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-7 col-lg-6">
+      <div class="col-md-7 col-lg-7">
         <div class="we-offer-inner1">
           <ul>
             <li>
@@ -376,7 +373,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 col-lg-3">
         <div class="tts">
           <h2>
             Why work <br />
@@ -384,7 +381,7 @@
           </h2>
         </div>
       </div>
-      <div class="col-md-8">
+      <div class="col-md-8 col-lg-9">
         <div class="tts">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -399,7 +396,7 @@
       </div>
     </div>
     <div class="row justify-content-end">
-      <div class="col-md-8">
+      <div class="col-md-8 col-lg-9">
         <div class="tts">
           <ul>
             <li>
@@ -529,16 +526,18 @@
 
 <!-- **************************lets start your project**************** -->
 <section class="lts">
+  <div class="lts-container">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="lts-inner">
-          <h2>Lets start your project now</h2>
+          <h2>Let's start your project now</h2>
           <a [routerLink]="['/contact']" class="btn-white-border"
             >Contact us now <img src="../../../assets/images/arrow.svg"
           /></a>
         </div>
       </div>
     </div>
+  </div>
   </div>
 </section>
